deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app
  namespace: geospatialanalyzer
  labels:
    app: gsa
spec:
  selector:
    app: gsa
  type: ClusterIP
  ports:
    - name: app
      port: 3000
      targetPort: 3000
      protocol: TCP
